kubernetes/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "popm-web"
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "pop-miner.hemi.xyz"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: "popm-web"
                port:
                  name: "http"
  tls:
    - hosts: [ "pop-miner.hemi.xyz" ]
      secretName: "popm-web-tls"
